--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       const signedImage = canvas.toDataURL('image/png');
 
       // Send the signed image to the Google Apps Script
-      const response = await fetch('https://cors-anywhere.herokuapp.com/https://script.google.com/macros/s/AKfycbxHb54sKljfOl7jaWvL_51uwfWql-jvb3DLexIJnRxs5Fuobe9NWGt-6Nl-GplTxKjg/exec', {
+      const response = await fetch('https://script.google.com/macros/s/AKfycbxHb54sKljfOl7jaWvL_51uwfWql-jvb3DLexIJnRxs5Fuobe9NWGt-6Nl-GplTxKjg/exec', {
         method: 'POST',
         body: JSON.stringify({ photoUrl, signedImage }),
         headers: { 'Content-Type': 'application/json' }
